test/parsetest/valid/new_array_index.java
class A {
    public void blub(){
        new int[5][3];
    }
}
