test/parsetest/invalid/wrong_type.java
class A {
    public true[] bla(){

    }
}